--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </main>
       <footer class="footer">
           <div class="container">
-              <p>Copiright © 2018 by Genya9000 </p>
+              <p class="pep">Copiright © 2018 by Genya9000</p><p class="pep1"><a href="https://www.youtube.com/channel/UCO-Zg6lFrGUWnvNvATJs0Kg/featured" target="_blank"><img src="https://img.icons8.com/windows/32/000000/youtube.png"></a></p><p><a href="https://www.instagram.com/emilykiev/?hl=ru" target="_blank"><img src="https://img.icons8.com/windows/32/000000/instagram-new.png"></a></p>
           </div>
       </footer>
       
